--- a/META.yml
+++ b/META.yml
@@ -9,7 +9,7 @@ configure_requires:
 distribution_type: module
 dynamic_config: 1
 generated_by: 'Module::Install version 1.06'
-license: perl
+license: gpl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
@@ -21,5 +21,5 @@ no_index:
 requires:
   perl: 5.10.0
 resources:
-  license: http://dev.perl.org/licenses/
+  license: http://opensource.org/licenses/gpl-license.php
 version: 0.01
