--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 ---
 abstract: 'preview tickets right from search results page'
 author:
-  - 'Ruslan Zakirov <ruz@bestpractical.com>'
+  - 'Best Practical Solutions, LLC <modules@bestpractical.com>'
 build_requires:
   ExtUtils::MakeMaker: 6.59
 configure_requires:
@@ -9,7 +9,7 @@ configure_requires:
 distribution_type: module
 dynamic_config: 1
 generated_by: 'Module::Install version 1.14'
-license: gplv2
+license: gpl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
@@ -21,9 +21,8 @@ no_index:
 requires:
   perl: 5.10.1
 resources:
-  homepage: https://github.com/bestpractical/rt-extension-previewinsearch/tree
   license: http://opensource.org/licenses/gpl-license.php
   repository: https://github.com/bestpractical/rt-extension-previewinsearch.git
-version: '0.03'
+version: '0.04'
 x_module_install_rtx_version: '0.37'
 x_requires_rt: 4.0.0
